Add thput benchmark of get_nhbrs(n, atype) for Neo4j